# partial_ref

./: Cargo.toml  README.md
partial_ref/: Cargo.toml  README.md
partial_ref/src/: lib.rs  macros.rs
partial_ref_derive/: Cargo.toml  README.md
partial_ref_derive/src/: lib.rs
partial_ref_tests/: Cargo.toml  LICENSE-MIT
partial_ref_tests/src/: doctest_helpers.rs  lib.rs
