[package]
name = "partial_ref"
description = "Type checked partial references"
version = "0.1.0"
authors = ["Jannis Harder <me@jix.one>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jix/partial_ref"
readme = "README.md"
edition = "2018"

[dependencies]
partial_ref_derive = { path = "../partial_ref_derive", version = "=0.1.0" }

[dev-dependencies]
partial_ref_tests = { path = "../partial_ref_tests" }
