[package]
name = "partial_ref_derive"
description = "Derives for partial_ref"
version = "0.1.0"
authors = ["Jannis Harder <me@jix.one>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jix/partial_ref"
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "0.15.21"
quote = "0.6.10"
