[package]
name = "partial_ref_derive"
description = "Derives for partial_ref"
version = "0.3.2"
authors = ["Jannis Harder <me@jix.one>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jix/partial_ref"
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.40"
quote = "1.0.7"
proc-macro2 = "1.0.20"
