[package]
name = "partial_ref_tests"
version = "0.3.0"
authors = ["Jannis Harder <me@jix.one>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jix/partial_ref"
edition = "2018"
publish = false

[dependencies]
partial_ref = { path = "../partial_ref" }
partial_ref_derive = { path = "../partial_ref_derive" }
